--- a/styles.css
+++ b/styles.css
@@ -10,5 +10,24 @@
     padding: 0;
 }
 
+body {
+    background: #adb195 url("images/green_background.jpg") top left repeat;
+    color: #75400a;
+    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+    font-size: 14px;
+}
 
+/* Layout */
 
+#logo {
+    display: block;
+    width: 200px;
+    margin: 40px auto;
+}
+
+#container {
+    width: 700px;
+    margin: 0 auto;
+    padding: 40px;
+    background: url("images/yellow_background.jpg") top left repeat;
+}
