--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,32 @@ body {
 }
 
 #container {
-    width: 700px;
+    width: 760px;
     margin: 0 auto;
     padding: 40px;
     background: url("images/yellow_background.jpg") top left repeat;
 }
+
+#container:after {
+    content:" ";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+
+#main-content {
+    width: 500px;
+    float: left;
+}
+
+#sidebar {
+    width: 200px;
+    float: left;
+    background: url("images/texture_background.jpg") top left repeat;
+    padding: 20px 20px 0;
+    margin: 0 0 0 20px;
+}
+
+
+
