--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
 
 #container {
     width: 760px;
-    margin: 0 auto;
+    margin: 0 auto 100px;
     padding: 40px;
     background: url("images/yellow_background.jpg") top left repeat;
 }
